# ProyectoPlazoleta/MicroServicioPlazoleta/src/main/java/com/pragma/microservicioplazoleta/aplication/handler/IPedidoHandler.java
@@ -10,6 +10,7 @@ public interface IPedidoHandler {
     List<PedidoResponse> listarPedidos(Long idEmpleado, String estado, int pagina, int tamano);
     PedidoResponse asignarEmpleado(Long idPedido, Long idEmpleado);
     PedidoResponse marcarComoListo(Long idPedido, Long idChef);
+    PedidoResponse cancelarPedido(Long idPedido, Long idCliente);
     PedidoResponse entregarPedido(Long idPedido, String codigoEntrega, Long idEmpleado);
     List<PedidoResponse> listarPedidosPorCliente(Long idCliente);
 }
